<resources>
    <string name="app_name">你瞅啥</string>
    <string name="save">保存</string>
    <string name="display_window">当打开该应用时是否开启\n悬浮窗?</string>
    <string name="is_monitoring">是否对该应用进行监控？</string>
    <string name="time_explain">您是想按照时间段监控软件还是按照时间总量进行监控呢？ 按照时间段是规定一天之中几点到几点之内不能使用该软件，可设置多个时间段; 按照时间总量是规定一天之内只能使用多长时间</string>
    <string name="time_alot">时间段</string>
    <string name="total">时间总量</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
</resources>
