<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_bar"></include>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/monitoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="35dp"
                android:padding="7dp"
                android:text="@string/is_monitoring" />

            <CheckBox
                android:id="@+id/monitoring_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/monitoring"
                android:layout_marginLeft="45dp"
                android:layout_toRightOf="@id/monitoring" />

            <TextView
                android:id="@+id/window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/monitoring"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:padding="7dp"
                android:text="@string/display_window" />

            <CheckBox
                android:id="@+id/window_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/window"
                android:layout_marginLeft="45dp"
                android:layout_toRightOf="@id/window" />

            <TextView
                android:id="@+id/time_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/window"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="40dp"
                android:text="@string/time_explain" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/time_explain"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/time_alot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_alot" />

                <RadioButton
                    android:id="@+id/time_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:text="@string/total" />
            </RadioGroup>

            <FrameLayout
                android:id="@+id/fram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio"></FrameLayout>


            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fram"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:background="@color/blue_btn"
                android:text="@string/save" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>